--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
+.Rdata
+.DS_Store
+inst/doc
