--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,2 +1,34 @@
 Package: PIO
-Version: 1.0.0
+Title: Panel Informativity Optimizer
+Version: 1.0
+Authors@R: 
+    person(given = "Vincent",
+           family = "Alcazer",
+           role = c("aut", "cre"),
+           email = "vincent.alczaer@chu-lyon.fr",
+           comment = c(ORCID = "0000-0003-1843-6286"))
+Description: PIO is an open-source software created to help researchers and biologists in designing their NGS panels.
+License: MIT + file LICENSE
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
+Imports: 
+    AnnotationDbi,
+    BiocManager,
+    data.table,
+    dplyr,
+    DT,
+    forcats,
+    ggplot2,
+    ggrepel,
+    limma,
+    org.Hs.eg.db,
+    readr,
+    shinydashboard,
+    shinyjs,
+    viridis
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
