--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports: 
     AnnotationDbi,
     BiocManager,
     data.table,
     dplyr,
+	tidyr,
     DT,
     forcats,
     ggplot2,
@@ -27,7 +28,8 @@ Imports:
     readr,
     shinydashboard,
     shinyjs,
-    viridis
+    viridis,
+	shinycssloaders
 Suggests: 
     rmarkdown,
     knitr
